k8s/apps/default/qbittorrent/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: qbittorrent
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      hostname: qbittorrent
      priorityClassName: cluster-p1
      terminationGracePeriodSeconds: 300
      volumes:
        - name: arr-media
          nfs:
            server: nas.cbannister.casa
            path: /mnt/bighorse/arr
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent
        - name: scripts
          configMap:
            name: qbittorrent-scripts
            defaultMode: 0775
        - name: music
          nfs:
            server: nas.cbannister.casa
            path: /mnt/bighorse/music/downloads
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 3005
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups: [3005]
        seccompProfile: { type: RuntimeDefault }
        sysctls:
          - name: net.ipv4.tcp_notsent_lowat
            value: "131072"
          - name: net.ipv4.tcp_fastopen
            value: "3"
          - name: net.ipv4.tcp_slow_start_after_idle
            value: "0"
      containers:
        - name: qbittorrent
          image: ghcr.io/buroa/qbittorrent-brr:5.2.0@sha256:40474d9a3b65bc93998fd84827177072574576d5214bb0515d699694f99b51dd
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
          ports:
            - containerPort: 80
              name: web
            - containerPort: 50413
              name: bt-tcp
              protocol: TCP
            - containerPort: 50413
              name: bt-udp
              protocol: UDP
          readinessProbe:
            httpGet: &probe
              port: web
              path: /api/v2/app/version
          startupProbe:
            httpGet: *probe
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet: *probe
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
          resources:
            requests:
              cpu: 2
              memory: 16Gi
            limits:
              memory: 32Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: arr-media
              mountPath: /data
            - name: scripts
              mountPath: /scripts/post-process.sh
              # readOnly: true
              subPath: post-process.sh
            - name: music
              mountPath: /data/downloads/torrents/complete/music
